--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
 language: python
 python:
-  3.7
-  3.9
+  - 3.9
 install:
-  pip install - requirements-dev.txt
+  - pip install -q -r requirements-dev.txt
 script:
   flake8
