criado requirements.txt teste close #14

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ env:
     - PIPENV_IGNORE_VIRTUALENVS=1
 
 install:
-  - pip install -r requirements-dev.txt
+  - pip install -r
 
 script:
   - flake8
