--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ env:
     - PIPENV_IGNORE_VIRTUALENVS=1
 
 install:
-  - pip install -r
+  - pip install -q -r requirements-dev.txt
 
 script:
   - flake8
