--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -3,4 +3,11 @@ pyflakes==2.3.1
 mccabe==0.6.1
 pycodestyle==2.7.0
 requests==2.26.0
+# Deps do pytestt
+pytest==6.2.4
+pyparsing==2.0.2
+pluggy == < 1.0.0a1,>= 0.12
+attrs==19.2.0
+py==1.8.2
+atomicwrites==1.0
 -r requirements.txt
