--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,8 @@ env:
     - PIPENV_IGNORE_VIRTUALENVS=1
 
 install:
-  - pip install -q -r requirements-dev.txt
+#- pip install -q -r requirements-dev.txt
 
 script:
   - flake8
   - pytest libpythonpro
-
