--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,14 @@ sudo: true
 
 python:
   - 3.7.2
+  - 3.9.2
 env:
   global:
     - PIPENV_VENV_IN_PROJECT=1
     - PIPENV_IGNORE_VIRTUALENVS=1
 
 install:
-#- pip install -q -r requirements-dev.txt
+  - pip install -q -r requirements-dev.txt
 
 script:
   - flake8
