--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,27 +1,13 @@
-atomicwrites==1.4.0
-attrs==21.2.0
-backports.entry-points-selectable==1.1.0
-certifi==2021.5.30
-charset-normalizer==2.0.3
-colorama==0.4.4
-coverage==5.5
-distlib==0.3.2
-filelock==3.0.12
 flake8==3.9.2
-idna==3.2
-iniconfig==1.1.1
-mccabe==0.6.1
-packaging==21.0
-platformdirs==2.0.2
-pluggy==0.13.1
-py==1.10.0
-pycodestyle==2.7.0
 pyflakes==2.3.1
-pyparsing==2.4.7
-pytest==6.2.4
-pytest-cov==2.12.1
+mccabe==0.6.1
+pycodestyle==2.7.0
 requests==2.26.0
-six==1.16.0
-toml==0.10.2
-urllib3==1.26.6
+# Deps do pytestt
+pytest==6.2.4
+pyparsing==2.0.2
+pluggy == < 1.0.0a1,>= 0.12
+attrs==19.2.0
+py==1.8.2
+atomicwrites==1.0
 -r requirements.txt
