--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ env:
     - PIPENV_VENV_IN_PROJECT=1
     - PIPENV_IGNORE_VIRTUALENVS=1
 install:
-  - pip install -q -r requirements-dev.txt
+  - pip install -r requirements-dev.txt
 script:
   - flake8
   - pytest libpythonpro
