--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -3,6 +3,7 @@ pyflakes==2.3.1
 mccabe==0.6.1
 pycodestyle==2.7.0
 requests==2.26.0
+
 # Deps do pytestt
 pytest==6.2.4
 py==1.8.2
@@ -12,3 +13,7 @@ pluggy<1.0.0a1,>=0.12
 attrs==19.2.0
 atomicwrites==1.0
 -r requirements.txt
+
+# Coverage
+coverage==5.2.1
+pytest-cov==2.12.1
