--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,10 @@ language: python
 dist: xenial
 sudo: true
 python:
-  - 3.7.2
-env:
-  global:
-    - PIPENV_VENV_IN_PROJECT=1
-    - PIPENV_IGNORE_VIRTUALENVS=1
+  - 3.9
 install:
-  - pip install -q -r requirements-dev.txt codecov
+  - pip install -q pipenv codecov
+  - pipenv sync --dev
 script:
   - flake8
   - pytest libpythonpro --cov=libpythonpro
